--- a/src/pages/docs/DocsContents.astro
+++ b/src/pages/docs/DocsContents.astro
@@ -20,6 +20,7 @@ const docCategories = {
   'above-all': 'Above All',
   foundation: 'Manipulation Foundation Model',
   'world-model': 'World Model',
+  'learning-from-human': 'Learning from Human',
 }
 
 type Props = {
